Added deprecation notice

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "b-tooltip",
-  "version": "0.1.0",
-  "description": "A Bosonic tooltip element which uses Tether, an excellent library with no dependencies by HubSpot.",
+  "version": "0.1.1",
+  "description": "b-tooltip has been deprecated. Use bosonic-core-elements instead.",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,9 +17,9 @@
   },
   "devDependencies": {
     "bosonic-test-tools": "*",
-    "grunt-bosonic": ">=0.4.0"
+    "grunt-bosonic": "~0.4.0"
   },
   "dependencies": {
-    "bosonic": ">=0.4.0"
+    "bosonic": "~0.4.0"
   }
 }
